# Talea

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: example.faa
talea/: __init__.py  __main__.py  application.py  architecture_router.py  artifacts.py  attention.py  cli.py  inference.py  io.py  model.py  physical.py  production.py  repeat_state.py  sequence.py  topology.py  unit_registration.py  wedge.py
talea/assets/: SHA256SUMS  deployment.json  global_model.joblib  local_calibration.json  protein_calibration.json  teacher_contract.json  teacher_model.pt  topology_config.json  wedge_config.json
tests/: test_application.py  test_attention.py  test_inference_helpers.py  test_physical.py  test_repeat_state.py  test_runtime_package.py  test_sequence.py  test_talea_production.py  test_unit_registration.py  test_wedge.py
