[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talea-solenoid"
version = "0.1.0"
description = "Sequence-only discovery of elongated protein solenoids from ESM++ attention"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Jacob West-Roberts"},
]
dependencies = [
  "joblib>=1.4",
  "numpy>=2.0",
  "packaging>=23",
  "scikit-learn>=1.6,<1.7",
  "scipy>=1.13",
  "torch>=2.2",
  "transformers>=4.57,<5",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
talea = "talea.cli:main"

[tool.setuptools]
packages = ["talea"]
include-package-data = true

[tool.setuptools.package-data]
talea = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
